2011-09-15  Eric Seidel  <eric@webkit.org>

        Remove ENABLE(SVG_AS_IMAGE) since all major ports have it on by default
        https://bugs.webkit.org/show_bug.cgi?id=68182

        Reviewed by Adam Barth.

        * configure.ac:

2011-09-15  Eric Seidel  <eric@webkit.org>

        Remove ENABLE_SVG_ANIMATION as all major ports have it on by default
        https://bugs.webkit.org/show_bug.cgi?id=68022

        Reviewed by Ryosuke Niwa.

        * Source/cmake/OptionsEfl.cmake:
        * Source/cmake/OptionsWinCE.cmake:
        * Source/cmakeconfig.h.cmake:
        * configure.ac:

2011-09-15  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r95163.
        http://trac.webkit.org/changeset/95163
        https://bugs.webkit.org/show_bug.cgi?id=68180

        [Qt] The QT_GCC_X variables were removed in Qt5 by accident.
        (Requested by darktears on #webkit).

        * Source/WebKit.pri:

2011-09-14  Alexis Menard  <alexis.menard@openbossa.org>

        [Qt] Replace QT_GCC_X as they don't exist in Qt5 anymore.
        https://bugs.webkit.org/show_bug.cgi?id=68114

        Reviewed by Kenneth Rohde Christiansen.

        Replace QT_GCC_X variables, they have been removed in Qt5. It was
        actually wrong to use them because they tell about which GCC version
        Qt has been compiled, not the current version of GCC use to build webkit.
        I use gcc -dumpversion to get it.

        * Source/WebKit.pri:

2011-09-14  Ulan Degenbaev  <ulan@chromium.org>

        [v8] Improve performance of typed array copy constructor taking Array
        https://bugs.webkit.org/show_bug.cgi?id=68015

        Reviewed by Kenneth Russell.

        Invoke the 'set' method of the constructed array instead of
        copying the elements of the source array one by one.

        Copy constructor tests already exist.

        * ../../Source/WebCore/WebCore.gypi:
        * ../../Source/WebCore/bindings/v8/custom/V8ArrayBufferViewCustom.cpp: Added.