@@ -1817,6 +1817,21 @@ void WebViewImpl::scrollFocusedNodeIntoView()
     }
 }
 
+void WebViewImpl::scrollFocusedNodeIntoRect(const WebRect& rect)
+{
+    Node* focusedNode = focusedWebCoreNode();
+    if (!focusedNode || !focusedNode->isElementNode())
+        return;
+    Element* elementNode = static_cast<Element*>(focusedNode);
+    LayoutRect bounds = elementNode->boundsInWindowSpace();
+    int centeringOffsetX = (rect.width - bounds.width()) / 2;
+    int centeringOffsetY = (rect.height - bounds.height()) / 2;
+    IntSize scrollOffset(bounds.x() - centeringOffsetX, bounds.y() - centeringOffsetY);
+    Frame* frame = mainFrameImpl()->frame();
+    if (frame && frame->view())
+        frame->view()->scrollBy(scrollOffset);
+}
+
 double WebViewImpl::zoomLevel()
 {
     return m_zoomLevel;
